# BB8-Robot

./: README.md
Communication/: client  client.c  server  server.c
Maxwell/: Makefile
Maxwell/Communication/: Makefile  P2PSetup.sh  receive.c  recieve.c
Maxwell/Servo/: FSM.cpp  compile.sh  motorControl.cpp  motorControl.h  robotControl.cpp  robotControl.h
Pascal/: CMakeLists.txt  Makefile
Pascal/Communication/: Makefile  Makefile~  P2PSetup2.sh  send.c  send.cpp
Pascal/Globals/: externals.cpp  externals.h
Pascal/Main/: run
Pascal/Vision/: CMakeCache.txt  CMakeLists.txt  FSM.cpp  FSM.h  Makefile  cmake_install.cmake  motionTrack.cpp  motionTrack.h  values.txt
Pascal/libs/: Readme
Test/CommunicationTest/: receive.c  send.c
Test/ServoTest/: testRun.cpp
Test/VisionTest/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  FSM.cpp  FSM.h  Makefile  cmake_install.cmake  motionTrack  motionTrack.cpp  motionTrack.h  test  test.cpp  values.txt
servo/: compile.sh  testRun.cpp
