cmake_minimum_required(VERSION 2.8)
project(motionTrack)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_library(FSM FSM.cpp)
add_executable(motionTrack motionTrack.cpp)
target_link_libraries(motionTrack ${OpenCV_LIBS} FSM)